--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<sysdesc.http.server.version>0.0.1</sysdesc.http.server.version>
+		<sysdesc.util.version>0.0.1</sysdesc.util.version>
 		<sysdesc.version>0.0.15</sysdesc.version>
 	</properties>
 
@@ -20,14 +22,14 @@
 		<dependency>
 			<groupId>br.com.sysdesc</groupId>
 			<artifactId>util</artifactId>
-			<version>${sysdesc.version}</version>
+			<version>${sysdesc.util.version}</version>
 			<scope>compile</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>br.com.sysdesc</groupId>
 			<artifactId>http-server</artifactId>
-			<version>${sysdesc.version}</version>
+			<version>${sysdesc.http.server.version}</version>
 			<scope>compile</scope>
 		</dependency>
 
@@ -44,6 +46,11 @@
 		<dependency>
 			<groupId>io.github.openfeign</groupId>
 			<artifactId>feign-slf4j</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.jtattoo</groupId>
+			<artifactId>JTattoo</artifactId>
 		</dependency>
 
 	</dependencies>
